Changes to HTML: Form Inputs & Submit Button + Turn Box

--- a/nim.html
+++ b/nim.html
@@ -12,14 +12,15 @@
         <h1>Nim: The Game</h1>
     </div>
 
-
+    <div id='turnBox'>'s turn</div>
     <div class="inputArea">
-        <form class="enterNameArea">
-            <label class="enterNameItem" for="fname">Player 1 Name:</label><br>
+
+        <form class="enterNameArea" id='form'>
+            <label class="enterNameItem" for="p1name">Player 1 Name:</label><br>
             <input class="enterNameItem" type="text" id="p1Name" name="p1Name" placeholder="Player 1 Name"><br>
-            <label class="enterNameItem" for="lname">Player 2 Name:</label><br>
+            <label class="enterNameItem" for="p2name">Player 2 Name:</label><br>
             <input class="enterNameItem" type="text" id="p2Name" name="p2Name" placeholder="Player 2 Name"><br><br>
-            <input class="enterNameItem" type="submit" value="Submit">
+            <button type="submit">Submit</button>
           </form>           
     </div>
 
