--- a/instructions.html
+++ b/instructions.html
@@ -22,11 +22,11 @@
     <div class="instructionContainerBox">
         <div class="instructionArea">
             <h4>Blah blah blah</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aperiam? Distinctio, facilis vitae! Excepturi incidunt itaque fuga minima quasi tempore nobis culpa sunt explicabo ut dolore commodi, beatae natus omnis.</p>
+            <p>Nim is a combinatorial game, where two players alternately take turns in taking objects from several heaps. The only rule is that each player must take at least one object on their turn, but they may take more than one object in a single turn, as long as they all come from the same heap.</p>
         </div>
         <div class="instructionArea">
             <h4>Blah blah blah</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aperiam? Distinctio, facilis vitae! Excepturi incidunt itaque fuga minima quasi tempore nobis culpa sunt explicabo ut dolore commodi, beatae natus omnis.</p>
+            <p>The traditional game of Nim is played with a number of coins arranged in heaps: the number of coins and heaps is up to you. There are two players. When it's a player's move he or she can take any number of coins from a single heap. They have to take at least one coin, though, and they can't take coins from more than one heap. The winner is the player who makes the last move, so there are no coins left after that move. (Some people play the game the other way around, with the last person to make a move losing the game, but we'll ignore that version for the moment.)</p>
         </div>
     </div>
 </body>
