--- a/instructions.html
+++ b/instructions.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/instructions.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <div class="titleArea">
@@ -21,12 +22,18 @@
 
     <div class="instructionContainerBox">
         <div class="instructionArea">
-            <h4>Blah blah blah</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aperiam? Distinctio, facilis vitae! Excepturi incidunt itaque fuga minima quasi tempore nobis culpa sunt explicabo ut dolore commodi, beatae natus omnis.</p>
+            <h4>What is Nim?</h4>
+            <p>Nim is a combinatorial game, where two players alternately take turns in taking objects from several heaps. The only rule is that each player must take at least one object on their turn, but they may take more than one object in a single turn, as long as they all come from the same heap.
+
+                Nim is the most well-known example of an impartial game, a game where both players have the same moves all the time, and thus the only distinguishing feature is that one player goes first. It is also completely solved, in the sense that the exact strategy has been found for any starting configuration.</p>
         </div>
         <div class="instructionArea">
-            <h4>Blah blah blah</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, aperiam? Distinctio, facilis vitae! Excepturi incidunt itaque fuga minima quasi tempore nobis culpa sunt explicabo ut dolore commodi, beatae natus omnis.</p>
+            <h4>Rules</h4>
+            <p>The basic Nim begins with two players and several heaps, each containing several objects. Occasionally, heaps are also called piles, and the objects are called stones.
+
+                Each player, in turn, must take at least one stone, but they may take more than one stone as long as they all come from the same pile. It's allowed to make a pile empty, effectively removing the pile out of the game. When a player is unable to move, the game ends. Naturally, as long as there is a stone, either player can take that stone, and thus can move. So the ending condition can be rephrased, where the game ends if there is no stone left.
+                
+                In normal Nim, the loser is the player unable to move. It is called normal condition by convention from combinatorial game theory, where a normal game gives the win to the last player making a move. In misère Nim, the player unable to move wins instead; this is equivalent to the player taking the last stone losing.</p>
         </div>
     </div>
 </body>
