--- a/nim.html
+++ b/nim.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/nim.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <div class="titleArea">
         <h1>Nim: The Game</h1>
+        <a href="instructions.html" class="btn btn-secondary">Look at the instructions</a>
+        <a href="index.html"class="btn btn-secondary">Go Back Home</a>
     </div>
 
     <div id='turnBox'>'s Turn</div>
+    <button class="btn btn-danger">End Turn</button>
     <div class="inputArea">
 
         <form class="enterNameArea" id='form'>
@@ -44,6 +48,8 @@
         </div>
         <div class="tipArea">
             <h1>Here's some tips</h1>
+            <p>You can take multiple sticks!</p>
+            <p>You can only take from one row at a time</p>
         </div>
     </div>
 </body>
