Function of End Turn button w/ Updated Changes to CSS & HTML

--- a/nim.html
+++ b/nim.html
@@ -15,8 +15,8 @@
         <a href="index.html"class="btn btn-secondary">Go Back Home</a>
     </div>
 
-    <div id='turnBox'>'s Turn</div>
-    <button class="btn btn-danger">End Turn</button>
+    <div class="titleArea" id='turnBox'>'s Turn</div>
+    
     <div class="inputArea">
 
         <form class="enterNameArea" id='form'>
@@ -51,6 +51,11 @@
             <p>You can take multiple sticks!</p>
             <p>You can only take from one row at a time</p>
         </div>
+    </div>
+    <div class="titleArea" id="titleAreaId">
+    
+    <form id='endTurnForm'>
+      <button class="btn btn-danger" type="submit">End Turn</button>
     </div>
 </body>
 
